--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "node-fetch": "^2.6.0",
     "redis": "^3.0.2",
     "selenium-standalone": "^6.15.6",
+    "short.io": "^1.3.1",
     "ua-parser-js": "^0.7.21"
   },
   "availableLanguages": [
