--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ ios/send-ios/assets/vendor.js
 ios/send-ios.xcodeproj/project.xcworkspace/xcuserdata/*
 ios/send-ios.xcodeproj/xcuserdata/*
 test/integration/downloads
-server/config.json
+server/config.js
